# repdefgen

./: .gitignore  CONTEXT.md  Dockerfile  pyproject.toml  requirements.txt  spec-repdefgen-cli.md  spec-repdefgen-web-ui.md
Simple/wo/model/wo/: ExtSystemClean.report
Simple/wo/server/reports/layouts/: ExtractionSystemClean.rdl
Simple/wo/server/reports/samplexml/: ExtSystemClean.xml
Simple/wo/source/wo/database/: ExtSystemClean.rdf
demo/: .gitignore  README.md  package-lock.json  package.json
demo/src/: AnnotatedVideo.tsx  Composition.tsx  Demo.tsx  Demo2.tsx
docs/: architecture.md
docs/adr/: 0001-rdl-as-sole-file-input.md  0002-semantic-vector-index-over-symbol-graph.md
repdefgen/: api.py  cli.py  generator.py  indexer.py  rdl_parser.py  rep_parser.py  retriever.py  session.py
sample/srvquo/model/srvquo/: JobQuote.report
sample/srvquo/server/reports/layouts/: JobQuote.rdl
sample/srvquo/server/reports/samplexml/: JobQuote.xml
sample/srvquo/server/reports/schemas/: JobQuote.xsd
sample/srvquo/source/srvquo/database/: JobQuote.rdf
sample/wo/server/reports/schemas/: ExtSystemClean.xsd
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: FieldListPanel.tsx  LoginStep.tsx  PreviewStep.tsx  ReviewStep.tsx  UploadStep.tsx
