[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "repdefgen"
version = "0.1.0"
description = "Generate IFS Report Definition Packages from Report Layouts"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.25",
    "chromadb>=0.4,<0.6",
    "sentence-transformers>=2.2",
    "click>=8.0",
    "lxml>=4.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
repdefgen = "repdefgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repdefgen*"]
